[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/enemy/baseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/enemy/painElomental/painElomental.gd" type="Script" id=2]
[ext_resource path="res://assets/objs/enemies/painElomental/painEleomental.tres" type="ArrayMesh" id=3]

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.7, 0.7, 0.7 ), Vector3( 0.742, 0.629, 0.765 ), Vector3( 0.638, 0.771, 0.664 ) ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.372093, 0.565891, 0.751938 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.738281, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
spread = 43.95
gravity = Vector3( 0, 0, -10 )
initial_velocity = 20.0
scale_curve = SubResource( 2 )
color_ramp = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=7]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=4]
material = SubResource( 7 )

[node name="painElomental" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="meshAnimPlayer" parent="meshFolder" index="0"]
autoplay = "idle"
anims/idle = SubResource( 8 )

[node name="MeshInstance" parent="meshFolder" index="1"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 1, 0 )
mesh = ExtResource( 3 )

[node name="leftBullet" type="Spatial" parent="meshFolder" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1855, 0.776897, 3.45554 )

[node name="bulletParticles" type="Particles" parent="meshFolder/leftBullet" index="0"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 16
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
visibility_aabb = AABB( -34, -15, -25, 68, 30, 50 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Position3D" type="Position3D" parent="meshFolder/leftBullet" index="1"]

[node name="rightBullet" type="Spatial" parent="meshFolder" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25758, 1.43891, 4.39417 )

[node name="bulletParticles" type="Particles" parent="meshFolder/rightBullet" index="0"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 16
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
visibility_aabb = AABB( -34, -15, -25, 68, 30, 50 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Position3D" type="Position3D" parent="meshFolder/rightBullet" index="1"]

[node name="leftBullet2" type="Spatial" parent="meshFolder" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.16926, 0.776897, -3.72586 )

[node name="bulletParticles" type="Particles" parent="meshFolder/leftBullet2" index="0"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 16
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
visibility_aabb = AABB( -34, -15, -25, 68, 30, 50 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Position3D" type="Position3D" parent="meshFolder/leftBullet2" index="1"]

[node name="rightBullet2" type="Spatial" parent="meshFolder" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25758, 1.43891, -3.60583 )

[node name="bulletParticles" type="Particles" parent="meshFolder/rightBullet2" index="0"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 16
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
visibility_aabb = AABB( -34, -15, -25, 68, 30, 50 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Position3D" type="Position3D" parent="meshFolder/rightBullet2" index="1"]
